test/sema/typeck/for/into-iterator-invalid-type.dora
class Foo
impl std::traits::IntoIterator for Foo {
    type IteratorType = FooIter;
    fn iter(): FooIter { return FooIter(); }
}

class FooIter

fn f(): Int32 {
    for i in Foo() {
        return i;
    }
    return 0i32;
}
